namespace StartupStarter.Core.Model.MediaAggregate.Enums;

public enum DeletionType
{
    SoftDelete,
    HardDelete
}
